[gd_scene load_steps=2 format=3 uid="uid://c85it8765o7p"]

[ext_resource type="Script" uid="uid://bydsarxf327sy" path="res://Scenes/Play/InventoryUI.gd" id="1_8y0h5"]

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 400.0
offset_top = 100.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8y0h5")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HeaderLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "INVENTORY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TabContainer" type="TabContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="Potions" type="Control" parent="PanelContainer/VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer/TabContainer/Potions"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer/Potions/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Food" type="Control" parent="PanelContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer/TabContainer/Food"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer/Food/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Close"

[node name="ConfirmationDialog" type="AcceptDialog" parent="."]
initial_position = 1
size = Vector2i(400, 300)
visible = true

[node name="VBoxContainer" type="VBoxContainer" parent="ConfirmationDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemInfoLabel" type="Label" parent="ConfirmationDialog/VBoxContainer"]
layout_mode = 2
text = "Item information will appear here"
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="ConfirmationDialog/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ConfirmationDialog/VBoxContainer"]
layout_mode = 2

[node name="ConfirmButton" type="Button" parent="ConfirmationDialog/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Use Item"

[node name="CancelButton" type="Button" parent="ConfirmationDialog/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"
